# IBMBob

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  example_doc_generation.py  example_test_generation.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
bob_sessions/: architecture_plan.md  bob_task_may-3-2026_2-18-24-pm.md  bob_task_may-3-2026_5-05-15-pm.md  bob_task_may-3-2026_6-11-04-pm.md  p2.txt  technology_statement.md
docs/: README.md  code_analyzer_docs.md  data_manager_docs.md  sample_calculator_docs.md
examples/: README.md  data_manager.py  sample_calculator.py
prompts/: p1.txt  problem_solution_statement.md
src/: __init__.py  main.py
src/analyzer/: __init__.py  code_analyzer.py
src/doc_generator/: __init__.py  doc_gen.py
src/test_generator/: __init__.py  test_gen.py
tests/: __init__.py  conftest.py  test_code_analyzer.py  test_data_manager.py  test_doc_gen.py  test_sample_calculator.py
