[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-workflow-accelerator"
version = "0.1.0"
description = "Accelerate developer onboarding with automated code analysis, documentation, and test generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["code-analysis", "documentation", "testing", "developer-tools", "ast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Code Generators",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dev-workflow-accelerator"
Documentation = "https://github.com/yourusername/dev-workflow-accelerator#readme"
Repository = "https://github.com/yourusername/dev-workflow-accelerator"
Issues = "https://github.com/yourusername/dev-workflow-accelerator/issues"

[project.scripts]
devflow = "src.main:main"

[tool.setuptools]
packages = ["src", "src.analyzer", "src.doc_generator", "src.test_generator"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"